<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/string_enter_your_age"
            android:textAlignment="center"
            android:textColor="@color/color_white"
            android:textSize="34sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextNumberYourAge"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/edittext_age"
            android:ems="10"
            android:fontFamily="@font/roboto_medium"
            android:hint="@string/string_your_age"
            android:inputType="number"
            android:maxLength="2"
            android:textAlignment="center"
            android:textColor="@color/color_white"
            android:textColorHint="@color/color_white_transparent_percent_60"
            android:textSize="20sp" />

        <android.widget.Button
            android:id="@+id/buttonNext"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_button_height"
            android:background="@drawable/button_common"
            android:enabled="false"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/string_next"
            android:textAllCaps="false"
            android:textSize="20sp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>