<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginLeft="32dp"
    android:layout_marginRight="32dp">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/dialog_background"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textViewRateAppText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="@dimen/dimen_margin_min"
            android:layout_marginTop="@dimen/dimen_margin_min"
            android:layout_marginRight="@dimen/dimen_margin_min"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/string_dialog_rate_app"
            android:textColor="@color/color_black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textViewRateAppTy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen_margin_min"
            android:layout_marginRight="@dimen/dimen_margin_min"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/string_dialog_thank_you"
            android:textSize="16sp"
            android:visibility="invisible" />

        <RatingBar
            android:id="@+id/ratingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/dimen_margin_min"
            android:numStars="5"
            android:stepSize="1"
            tools:ignore="SpeakableTextPresentCheck" />

    </LinearLayout>

    <android.widget.Button
        android:id="@+id/buttonSend"
        android:layout_width="0dp"
        android:layout_height="@dimen/dimen_button_height"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/button_common"
        android:enabled="false"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/string_send"
        android:textAllCaps="false"
        android:textColor="@color/color_black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>