<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_margin"
        android:layout_marginTop="@dimen/dimen_margin"
        android:layout_marginEnd="@dimen/dimen_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/imageButtonHome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/button_home"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/textViewQuestionCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_medium"
            android:text="0/0"
            android:textColor="@color/color_white"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:background="@drawable/timer_frame"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/imageViewTimer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="8dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/time_much" />

            <TextView
                android:id="@+id/textViewTimer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="16dp"
                android:layout_weight="1"
                android:fontFamily="@font/roboto_medium"
                android:text="20"
                android:textColor="@color/color_white"
                android:textSize="20sp" />

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:id="@+id/scrollViewTest"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/buttonNext"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageViewQuestion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:background="@drawable/button_answer"
                android:paddingLeft="4dp"
                android:paddingTop="6dp"
                android:paddingRight="4dp"
                android:paddingBottom="6dp"
                app:srcCompat="@drawable/empty_question" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:weightSum="3">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:weightSum="99">

                    <ImageButton
                        android:id="@+id/imageButtonAnswer1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:layout_weight="33"
                        android:background="@drawable/button_answer"
                        android:padding="6dp"
                        android:scaleType="fitCenter"
                        app:srcCompat="@drawable/empty_answer"
                        tools:ignore="SpeakableTextPresentCheck" />

                    <ImageButton
                        android:id="@+id/imageButtonAnswer2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:layout_weight="33"
                        android:background="@drawable/button_answer"
                        android:padding="6dp"
                        android:scaleType="fitCenter"
                        app:srcCompat="@drawable/empty_answer"
                        tools:ignore="SpeakableTextPresentCheck" />

                    <ImageButton
                        android:id="@+id/imageButtonAnswer3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:layout_weight="33"
                        android:background="@drawable/button_answer"
                        android:padding="6dp"
                        android:scaleType="fitCenter"
                        app:srcCompat="@drawable/empty_answer"
                        tools:ignore="SpeakableTextPresentCheck" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:weightSum="99">

                    <ImageButton
                        android:id="@+id/imageButtonAnswer4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:layout_weight="33"
                        android:background="@drawable/button_answer"
                        android:padding="6dp"
                        android:scaleType="fitCenter"
                        app:srcCompat="@drawable/empty_answer"
                        tools:ignore="SpeakableTextPresentCheck" />

                    <ImageButton
                        android:id="@+id/imageButtonAnswer5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:layout_weight="33"
                        android:background="@drawable/button_answer"
                        android:padding="6dp"
                        android:scaleType="fitCenter"
                        app:srcCompat="@drawable/empty_answer"
                        tools:ignore="SpeakableTextPresentCheck" />

                    <ImageButton
                        android:id="@+id/imageButtonAnswer6"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:layout_weight="33"
                        android:background="@drawable/button_answer"
                        android:padding="6dp"
                        android:scaleType="fitCenter"
                        app:srcCompat="@drawable/empty_answer"
                        tools:ignore="SpeakableTextPresentCheck" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearLayoutButtons"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:weightSum="99">

                    <ImageButton
                        android:id="@+id/imageButtonAnswer7"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:layout_weight="33"
                        android:background="@drawable/button_answer"
                        android:padding="6dp"
                        android:scaleType="fitCenter"
                        app:srcCompat="@drawable/empty_answer"
                        tools:ignore="SpeakableTextPresentCheck" />

                    <View
                        android:id="@+id/view"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="33" />

                    <ImageButton
                        android:id="@+id/imageButtonAnswer8"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:layout_weight="33"
                        android:background="@drawable/button_answer"
                        android:padding="6dp"
                        android:scaleType="fitCenter"
                        app:srcCompat="@drawable/empty_answer"
                        tools:ignore="SpeakableTextPresentCheck" />

                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/linearLayoutTimeIsOver"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/buttonNext"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/string_time_is_over"
            android:textAlignment="center"
            android:textColor="@color/color_white"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/string_try_again"
            android:textAlignment="center"
            android:textColor="@color/color_white"
            android:textSize="20sp" />
    </LinearLayout>

    <android.widget.Button
        android:id="@+id/buttonNext"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_button_height"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="@dimen/dimen_margin"
        android:background="@drawable/button_common"
        android:enabled="false"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/string_next"
        android:textAllCaps="false"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>